# SmallObjDetector

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
dev/: main.py
src/small_object_detector/: __init__.py  __main__.py  cmo_peak.py  g_images.py  generate_simulated_cmo_image.py  horizon.py  image_loader.py  image_utils.py
utils/: cmo_peak.py  g_images.py  horizon.py  image_loader.py  image_utils.py
