[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small_object_detector"
version = "0.0.1"
description = "Small Object Detector "
readme = "README.md"
authors = [{ name = "John Newton", email = "xyz@abc.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["detector"]
dependencies = [
    "imutils",
    "keyboard==0.13.5",
    "matplotlib",
    "moviepy",
    "numpy",
    "opencv-python==4.7.0.72",
    "Pillow",
    "PyTurboJPEG==1.7.3",
    "scipy",
    "scikit-image",
    ]

requires-python = ">=3.8"

[project.optional-dependencies]
build = ["build", "twine"]
dev   = ["black", "bumpver", "isort", "mypy", "pip-tools", "pytest"]

[project.scripts]
sodrun = "small_object_detector.__main__:main"

[project.urls]
repository    = "https://github.com/johnnewto/SmallObjDetector"
documentation = "https://github.com/johnnewto/SmallObjDetector/readme.md"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/small_object_detector/__init__.py" = ["{version}"]
    "src/small_object_detector/__main__.py" = ["- small-object-detector v{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

# [tool.mypy]
# strict = true

#     [[tool.mypy.overrides]]
#     module                 = "feedparser"
#     ignore_missing_imports = true
